added hello text to content_main.xml

--- a/HelloWorld/app/src/main/res/values/strings.xml
+++ b/HelloWorld/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Hello World</string>
     <string name="action_settings">Settings</string>
     <string name="helloworld">Hello FoodCraft from Paul</string>
+    <string name="hello_from_brook">Brook says Hi!</string>
 </resources>
