--- a/FoodCraft/app/src/main/res/values/strings.xml
+++ b/FoodCraft/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="upc">Scan a UPC code</string>
 </resources>
