--- a/FoodCraft/app/src/main/res/values/strings.xml
+++ b/FoodCraft/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="app_label">IngredientSearch</string>
     <string name="search_hint">Search Ingredients</string>
     <string name="search">Search</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
