--- a/FoodCraft/app/src/main/res/values/strings.xml
+++ b/FoodCraft/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="bigoven_api">Search an ingredient in BigOven </string>
     <string name="yummly_api">Search an ingredient in Yummly </string>
     <string name="title_activity_yummly_search" >YummlySearchActivity</string>
+    <string name="title_activity_temp_result">TempResultActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
