--- a/FoodCraft/app/src/main/res/values/strings.xml
+++ b/FoodCraft/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="search_hint">Search Ingredients</string>
     <string name="search">Search</string>
     <string name="main_title">Recipe Results</string>
+    <string name="title_activity_maps">MapsActivity</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
